--- a/src/app/componentes/rodape/rodape.component.html
+++ b/src/app/componentes/rodape/rodape.component.html
@@ -1,7 +1,7 @@
 <footer>
-  <small class="textoCopyright ff-inter">&copy;
-      2024 Marsia Luckner. Todos os direitos reservados.
-
+  <small class="TextoCopyright ff-inter">&copy;
+    2022 Grupo Alura. Todos os direitos reservados.
   </small>
   <img class="LogoRodape" src="../../../assets/imagens/logo-alura.png" alt="Logo da Alura">
 </footer>
+
